restructured app crypto functions, direct decrypt, drip rate

--- a/components/Alice/styles/appForm.module.css
+++ b/components/Alice/styles/appForm.module.css
@@ -11,6 +11,13 @@
 
 .formListContainer {
     display: flex;
+    justify-content: center;
     width: 100%;
     flex-wrap: wrap;
+}
+
+.deployContainer {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 20px;
 }
